fix bug getbyId in router tasks
