# src/routes/tasks.routes.js
@@ -6,10 +6,8 @@ const router = express.Router();
 router
     .get("/all", taskController.getAll)
     .get("/:id", taskController.getById)
-    .post("/new", taskController.create)
     .put("/:id", taskController.update)
-    .delete("/:id", taskController._delete);
-
-router.get("/all/complete-task", taskController.getByComplete);
+    .delete("/:id", taskController._delete)
+    .post("/new", taskController.create);
 
 module.exports = router;
